--- a/template3.yaml
+++ b/template3.yaml
@@ -12,7 +12,7 @@ spec:
   owner: frontdes-development/docs
   templater: cookiecutter
   type: documentation
-  path: '.'
+  path: './pepe'
   
   schema:
     required: 
