Update and rename template3.yaml to template4.yaml

--- a/template4.yaml
+++ b/template4.yaml
@@ -12,7 +12,7 @@ spec:
   owner: frontdes-development/docs
   templater: cookiecutter
   type: documentation
-  path: './pepe'
+  path: '.'
   
   schema:
     required: 
